--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-actions>
+    <mat-card-actions align="end">
         <button mat-raised-button color="accent" routerLink="/event">
             <mat-icon inline=true>add_circle</mat-icon>
             Create New Event
