--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card *ngIf="user">
     <mat-card-actions align="end">
         <button mat-raised-button color="accent" routerLink="/event">
             <mat-icon inline=true>add_circle</mat-icon>
@@ -7,6 +7,7 @@
     </mat-card-actions>
 </mat-card>
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+<app-about *ngIf="!user"></app-about>
 
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/event', teamEvent.id]" *ngFor="let teamEvent of teamEvents">
