--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     </mat-card-actions>
 </mat-card>
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
-<app-about *ngIf="!user"></app-about>
+<app-about *ngIf="!isLoading && !user"></app-about>
 
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/event', teamEvent.id]" *ngFor="let teamEvent of teamEvents">
