--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,21 @@
-<p>User profile page coming soon.</p>
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+<mat-card *ngIf="!isLoading">
+    <mat-card-header>
+        <mat-card-title-group>
+            <mat-card-title>{{user.displayName}}</mat-card-title>
+            <img mat-card-md-image [src]="user.photoURL" referrerpolicy="no-referrer" alt="Profile image">
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-form-field class="full-width">
+            <mat-label>Display Name</mat-label>
+            <input matInput name="displayName" [ngModel]="user.displayName"
+                (ngModelChange)="updateUser({displayName: $event })">
+        </mat-form-field>
+        <mat-form-field class="full-width">
+            <mat-label>About</mat-label>
+            <textarea matInput name="eventDescription" [ngModel]="user.about"
+                (ngModelChange)="updateUser({about: $event })"></textarea>
+        </mat-form-field>
+    </mat-card-content>
+</mat-card>
