--- a/src/app/user-profile-view/user-profile-view.component.html
+++ b/src/app/user-profile-view/user-profile-view.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
         <mat-card-title-group>
             <mat-card-title>{{user.displayName}}</mat-card-title>
-            <img mat-card-md-image [src]="user.photoURL" referrerpolicy="no-referrer" alt="Profile image">
+            <img mat-card-xl-image [src]="user.photoURL" referrerpolicy="no-referrer" alt="Profile image">
         </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
