--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -13,7 +13,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card *ngFor="let message of messages | async">
+<mat-card *ngFor="let message of messages$ | async">
     <mat-card-header>
         <img mat-card-avatar [src]="message.photoURL" referrerpolicy="no-referrer" [alt]="message.displayName">
         <mat-card-title>{{message.displayName}}</mat-card-title>
