refactor new event creation

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,7 +32,8 @@
         </p>
     </mat-card-content>
     <mat-card-actions align="end">
-        <button mat-raised-button color="accent" routerLink="/event">
+        <!--ToDo change to create new event and redirect to the new event page-->
+        <button mat-raised-button color="accent" routerLink="login" [queryParams]="{redirectUrl: '/'}">
             <mat-icon inline=true>add_circle</mat-icon>
             Create New Event
         </button>
