remove ngx-auth-firebaseui

--- a/src/app/auth-firebaseui-avatar/auth-firebaseui-avatar.component.html
+++ b/src/app/auth-firebaseui-avatar/auth-firebaseui-avatar.component.html
@@ -1,3 +1,4 @@
+<!--ToDo: review this-->
 <button *ngIf="user" class="ngx-auth-firebaseui-avatar-button" [matMenuTriggerFor]="posXMenu"
   [matTooltip]="user.displayName ? user.displayName : ''" [style.background-image]="'url(' + user.photoURL + ')'"
   aria-label="Open x-positioned menu" mat-mini-fab style="background-size: cover">
