--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,1 @@
-<ngx-auth-firebaseui [providers]="providers" [guestEnabled]="false"
-    (onSuccess)="onSuccess($event)"></ngx-auth-firebaseui>
+Coming Soon
