--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,84 @@
-Coming Soon
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Log in</mat-card-title>
+        <mat-card-subtitle>using your existing provider</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <div fxLayout="column" fxLayoutAlign="center">
+            <button mat-raised-button class="login-button" (click)="loginWithProvider('google')">
+                <mat-icon svgIcon="google" inline=true></mat-icon>
+                Log in with Google
+            </button>
+            <button mat-raised-button class="login-button" (click)="loginWithProvider('facebook')">
+                <mat-icon svgIcon="facebook" inline=true></mat-icon>
+                Log in with Facebook
+            </button>
+            <button mat-raised-button class="login-button" (click)="loginWithProvider('microsoft')">
+                <mat-icon svgIcon="microsoft" inline=true></mat-icon>
+                Log in with Microsoft
+            </button>
+        </div>
+    </mat-card-content>
+</mat-card>
+<mat-divider></mat-divider>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Or</mat-card-title>
+        <mat-card-subtitle>with your password</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <form (ngSubmit)="signInWithPassword()" #signInForm="ngForm">
+            <div fxLayout="column" fxLayoutAlign="center">
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input matInput required autocomplete="username" type="text" id="emailCtrl" name="emailCtrl"
+                        [(ngModel)]="email" #emailCtrl="ngModel">
+                    <mat-icon matSuffix>email</mat-icon>
+                    <div *ngIf="emailCtrl.invalid && (emailCtrl.dirty || emailCtrl.touched)">
+                        <mat-error *ngIf="emailCtrl.errors?.['required']">
+                            Email is required
+                        </mat-error>
+                        <mat-error *ngIf="emailCtrl.errors?.['pattern']">
+                            Please enter a valid email address
+                        </mat-error>
+                    </div>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput required autocomplete="current-password" [type]="passwordInputType"
+                        id="passwordCtrl" name="passwordCtrl" [(ngModel)]="password" #passwordCtrl="ngModel">
+
+                    <button *ngIf="passwordInputType==='password'" matSuffix mat-icon-button
+                        (click)="passwordInputType='text'">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                    <button *ngIf="passwordInputType==='text'" matSuffix mat-icon-button
+                        (click)="passwordInputType='password'">
+                        <mat-icon>visibility_off</mat-icon>
+                    </button>
+                    <mat-icon matSuffix>lock</mat-icon>
+                    <div *ngIf="passwordCtrl.invalid && (passwordCtrl.dirty || passwordCtrl.touched)">
+                        <mat-error *ngIf="passwordCtrl.errors?.['required']">
+                            Password is required
+                        </mat-error>
+                    </div>
+                </mat-form-field>
+
+                <button [disabled]="!signInForm.form.valid" mat-raised-button type="submit" color="primary">
+                    LOGIN
+                </button>
+                <div fxLayoutAlign="center">
+                    <button (click)="isForgotPassword=true" mat-button>
+                        Forgot Password?
+                    </button>
+                </div>
+                <section fxLayoutAlign="center">
+                    <div class="section-label">Not a member yet?</div>
+                    <button mat-button>
+                        Sign up
+                    </button>
+                </section>
+            </div>
+        </form>
+    </mat-card-content>
+</mat-card>
