--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     Team Builder
     <span fxFlex></span>
     <button mat-button *ngIf="showSignInButton" [routerLink]="['/login']"> Sign In </button>
+    <auth-firebaseui-avatar [links]="avatarLinks" [canViewAccount]=false (onSignOut)="onSignOut()">
+    </auth-firebaseui-avatar>
   </mat-toolbar>
 
   <router-outlet></router-outlet>
